////////////////////////////////////////////////////
// USERS & PROFILE
////////////////////////////////////////////////////

Table users {
  id            int          [pk, increment]
  email         varchar(200) [not null, unique]
  name          varchar(100) [not null]
  password_hash varchar(255) [not null]
  role          varchar(50)  [not null, default: 'user']
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz
}

Table profiles {
  id          int          [pk, increment]
  user_id     int          [not null, unique, ref: > users.id] // on delete CASCADE (conceptually)
  bio         varchar(500)
  avatar_url  varchar(255)
  created_at  timestamptz  [not null, default: `now()`]
  updated_at  timestamptz
}

////////////////////////////////////////////////////
// CATEGORIES
////////////////////////////////////////////////////

Table categories {
  id          int          [pk, increment]
  name        varchar(100) [not null, unique]
  created_at  timestamptz  [not null, default: `now()`]
  updated_at  timestamptz
}

////////////////////////////////////////////////////
// PRODUCTS
////////////////////////////////////////////////////

Table products {
  id          int          [pk, increment]
  name        varchar(100) [not null]
  price       float        [not null]
  created_at  timestamptz  [not null, default: `now()`]
  updated_at  timestamptz
}

////////////////////////////////////////////////////
// PRODUCT ↔ CATEGORY (M:N)
////////////////////////////////////////////////////

Table product_categories {
  product_id  int [not null, ref: > products.id]   // on delete CASCADE
  category_id int [not null, ref: > categories.id] // on delete CASCADE

  indexes {
    (product_id, category_id) [pk]
  }
}

////////////////////////////////////////////////////
// ORDERS
////////////////////////////////////////////////////

Table orders {
  id          int         [pk, increment]
  user_id     int         [ref: > users.id] // on delete SET NULL
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz
}

////////////////////////////////////////////////////
// ORDER ITEMS
////////////////////////////////////////////////////

Table order_items {
  id          int         [pk, increment]
  order_id    int         [not null, ref: > orders.id]   // on delete CASCADE
  product_id  int         [ref: > products.id]           // on delete SET NULL
  quantity    int         [not null]
  unit_price  float       [not null]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz
}
